# lx-retroterm

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  app_window.c  app_window.h  config.c  config.h  hex_upload.c  hex_upload.h  main.c  menu.c  menu.h  serial_config_dialog.c  serial_config_dialog.h  serial_conn.c  serial_conn.h  session_log.c  session_log.h  status_bar.c  status_bar.h  terminal_view.c  terminal_view.h  text_sender.c  text_sender.h  toolbar.c  toolbar.h  toolbar_toggle.c  toolbar_toggle.h  view_settings.c  view_settings.h  xmodem_gui.c  xmodem_gui.h
include/: libttcore.h  ttcore_buffer.h  ttcore_io.h  ttcore_transfer.h  vtcharset.h  vtcolor.h  vtmouse.h  vtparse.h
src/: libttcore.c  ttcore_buffer.c  ttcore_io.c  ttcore_transfer.c  vtcharset.c  vtcolor.c  vtmouse.c  vtparse.c
